# RLightning

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/: Makefile  make.bat  requirements.txt
docs/scripts/: normalize_apidoc_titles.py
docs/source/: conf.py  index.rst  what_is_rlightning.rst
docs/source/_static/: custom.css
docs/source/algorithms/: index.rst  overview.rst
docs/source/api/: index.rst
examples/algorithm_template/: README.md  launch_train.sh  pyproject.toml  train.py
examples/algorithm_template/conf/: train_algo.yaml
examples/openpi_ppo/: README.md  launch_train_ppo_sync.sh  launch_train_ppo_sync_ddp.sh  launch_train_ppo_sync_tiny.sh  launch_train_ppo_sync_tiny_ddp.sh  pyproject.toml  train_ppo.py  utils.py
examples/openpi_ppo/conf/: train_ppo.yaml  train_ppo_ddp.yaml  train_ppo_tiny.yaml  train_ppo_tiny_ddp.yaml
examples/openpi_ppo/conf/buffer/: sharded_buffer.yaml
examples/openpi_ppo/conf/cluster/: 1t1e.yaml  4t4e.yaml  4t4e_manual.yaml
examples/openpi_ppo/conf/env/: libero.yaml  libero_x4.yaml  libero_x8.yaml
examples/openpi_ppo/conf/log/: tensorboard.yaml  wandb.yaml
examples/openpi_ppo/conf/policy/: openpi_ppo.yaml
examples/openpi_ppo/conf/policy/backend/: transformers.yaml  vllm.yaml
examples/openpi_ppo/conf/train/: train.yaml  train_tiny.yaml
examples/openpi_ppo/scripts/: download_assets.sh  setup_libero.sh  setup_openpi.sh
examples/openvla_ppo/: launch_train_ppo_colocate_ddp_x8.sh  launch_train_ppo_ddp.sh  launch_train_ppo_sync.sh  pyproject.toml  train_ppo.py  utils.py
examples/openvla_ppo/conf/: train_ppo.yaml  train_ppo_colocate_ddp_x8.yaml
examples/openvla_ppo/conf/buffer/: rollout_buffer.yaml
examples/openvla_ppo/conf/cluster/: 2t2e_manual.yaml  8t8e_colocate.yaml
examples/openvla_ppo/conf/cluster/resource_pool/: global_pool.yaml
examples/openvla_ppo/conf/env/: maniskill.yaml  maniskill_x8.yaml
examples/openvla_ppo/conf/log/: tensorboard.yaml  wandb.yaml
examples/openvla_ppo/conf/policy/: openvla_ppo.yaml
examples/openvla_ppo/conf/train/: train.yaml  train_dp8.yaml
examples/openvla_ppo/maniskill/: __init__.py
examples/openvla_ppo/maniskill/tasks/: __init__.py  put_carrot_on_plate.py  put_on_in_scene_multi.py
examples/openvla_ppo/maniskill/tasks/variants/: __init__.py  put_on_plate_25_carrot.py  put_on_plate_25_ee_pose.py  put_on_plate_25_image.py  put_on_plate_25_instruct.py  put_on_plate_25_multi_carrot.py  put_on_plate_25_multi_plate.py  put_on_plate_25_plate.py  put_on_plate_25_position.py  put_on_plate_25_position_change.py  put_on_plate_25_single.py  put_on_plate_25_vision_image.py  put_on_plate_25_vision_texture.py  put_on_plate_25_vision_whole.py  utils.py
examples/wbc_tracking/: README.md  launch.sh  launch_ddp.sh  launch_local.sh  launch_multi_node.sh  launch_multi_node_ddp_x8.sh  motion_converter.py  pyproject.toml  retarget_lafan.py  setup.sh  train.py  user.config.json  utils.py
examples/wbc_tracking/conf/: async_launch.yaml  async_vtrace.yaml  launch.yaml  launch_ddp.yaml  launch_multinode_ddp.yaml  launch_multinode_ddp_x8.yaml
examples/wbc_tracking/conf/buffer/: rollout.yaml  sharded_buffer.yaml
examples/wbc_tracking/conf/cluster/: 1train_1eval.yaml  2train_2eval.yaml  4train_4eval.yaml  8train_8eval.yaml
examples/wbc_tracking/conf/env/: multi_task.yaml  multi_task_x4.yaml  multi_task_x8.yaml  single_task.yaml  template.yaml
examples/wbc_tracking/conf/ik/: lafan_to_unitree_g1.yaml
examples/wbc_tracking/conf/policy/: rsl_rl_ppo.yaml
examples/wbc_tracking/conf/train/: rsl_rl.yaml
examples/wbc_tracking/envs/: __init__.py  flat_env_cfg.py  tracking_env_cfg.py
examples/wbc_tracking/mdp/: __init__.py  commands.py  events.py  motion.py  observations.py  rewards.py  terminations.py
examples/wbc_tracking/robots/: g1.py  g1_mocap_29dof.xml
rlightning/: __init__.py
rlightning/buffer/: __init__.py  base_buffer.py  replay_buffer.py  rollout_buffer.py  sampler.py
rlightning/engine/: __init__.py  async_rl_engine.py  async_rsl_rl_engine.py  base_engine.py  evaluation_engine.py  rsl_rl_engine.py  sync_rl_engine.py
rlightning/env/: __init__.py  ale_env.py  base_env.py  env_group.py  env_server.py  isaac_env.py  isaac_marl_env.py  libero_env.py  maniskill_env.py  mujoco_env.py  piper_env.py
rlightning/humanoid/: README.md  data_retriever.py  requirements.txt  types.py
rlightning/models/: model_utils.py
rlightning/policy/: __init__.py  base_policy.py  policy_group.py  supervised_policy.py
rlightning/types/: __init__.py  batched_data.py  env_rets.py  metadata.py  policy_response.py
rlightning/utils/: builders.py  common.py  launch.py  utils.py
rlightning/weights/: __init__.py  utils.py  weight_buffer.py  weight_buffer_mixin.py  weight_transfer_manager.py
scripts/env_server/: launch_env_server.py  launch_maniskill_env.sh
scripts/ray/: launch_ray_cluster.sh
(+188 files in other folders)
