[project]
name = "rlightning-example-template"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "rlightning[dev]",   # choose optional extras: dev, isaaclab, maniskill, mujoco
    # add algorithm-specific dependencies here
]

[tool.uv.sources]
rlightning = {path = "../../", editable = true}