[project]
name = "rlightning-example-openpi-ppo"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "rlightning[dev]",
    "openpi",
    "libero",
    "flash_attn",
    "gym", # Consider whether to use gymnasium or gym
    "gsutil",
    "robosuite==1.4.1",
    "imageio[ffmpeg]",
    "bddl",
    "easydict",
    "cloudpickle",
    "matplotlib",
    "tyro",
]


[tool.uv]
override-dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
]

[tool.uv.sources]
openpi = {git = "https://github.com/RLinf/openpi.git"}
# LIBERO 必须使用 editable 安装，否则从 git 构建时 assets (XML 等) 不会被包含到包中。
# 安装步骤: 1) bash scripts/setup_libero.sh  2) uv sync  3) bash scripts/setup_openpi.sh
libero = {path = ".venv/LIBERO", editable = true}
rlightning = {path = "../../", editable = true}
flash_attn = {url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.6cxx11abiFALSE-cp311-cp311-linux_x86_64.whl" }
