[project]
name = "rlightning-example-openvla-ppo"
version = "0.0.1"
requires-python = "==3.11.*"
dependencies = [
    "rlightning[dev, maniskill]",
    "openvla",
    "flash_attn",
    "tokenizers==0.19.1",
    "transformers==4.40.1",
    "peft==0.11.1",
    "tyro",
    "datasets==3.3.2",
    "opencv-python-headless",
]

[tool.uv]
override-dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
]

[tool.uv.sources]
rlightning = {path = "../../", editable = true}
openvla = { git = "https://github.com/openvla/openvla.git" }
flash_attn = {url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.6cxx11abiFALSE-cp311-cp311-linux_x86_64.whl" }